<resources>
    <string name="app_name">QualifeedTeamLeader</string>

    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="required">Required</string>
    <string name="login">Login</string>
    <string name="team_leader">TeamLeader</string>
    <string name="new_defect">new defect</string>
    <string name="team">team</string>
    <string name="communication">Communication</string>
    <string name="product_type">Product Type : </string>
    <string name="date">Date</string>
    <string name="checked">Checked</string>
    <string name="repair">Repair</string>
    <string name="scraped">Scraped</string>
    <string name="blocked">Blocked</string>
    <string name="logout">Logout</string>
    <string name="suspect_defect">Suspect Defect</string>
    <string name="repaired_piece">Repaired Piece</string>
    <string name="scrap">Scrap</string>
    <string name="add_defect">Add Defect</string>
    <string name="product_id">Product ID</string>
    <string name="defect_id">Defect ID</string>
    <string name="defect_des">Defect description</string>
    <string name="add">Add</string>
    <string name="msg_alert">Do you wanna add this defect to the defect list</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="do_you_wanna_block_this_profile">Do you wanna BLOCK this profile</string>

    <string name="do_you_wanna_unblock_this_profile">Do you wanna UNBLOCK this profile</string>
    <string name="data_not_available">Not available</string>
    <string name="shift">Shift :</string>
    <string name="control_session">Control Session</string>
    <string name="repair_time">Repair Time</string>
    <string name="total_session">"Total Session : "</string>
    <string name="defect_discription">Defect Discription</string>
    <string name="click_the_picture">Click the picture</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_your_message">Compose your Message</string>
    <string name="sent">sent</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="action">Action</string>
    <string name="send_training">send training</string>
    <string name="block_the_worker">block the worker</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="choose_training_to_the_worker">Choose training to the worker</string>
    <string name="please_select_training_type">Please select training type</string>

    <string name="block_worker">Worker has been blocked</string>
    <string name="sent_training">Send training</string>
    <string name="product_ref">Product Ref</string>
    <string name="title">Title</string>

</resources>