<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFF2F7">


    <RelativeLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="#C0CCDA">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_session" />

    </RelativeLayout>


    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="@string/do_you_wanna_block_this_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />


    <LinearLayout
        android:layout_below="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_14sdp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_5sdp"

            />



        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_5sdp"
            />






    </LinearLayout>




</RelativeLayout>