<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/gray_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/add_defect"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />


            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_15sdp"

                android:visibility="gone"/>


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layuotMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/product_type"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/dark_gray" />





            <EditText
                android:id="@+id/etDefectId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/product_ref"
                android:textColor="@color/gray_light"
                android:textColorHint="@color/gray_light"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />



            <EditText
                android:id="@+id/etDefectTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/title"
                android:textColor="@color/gray_light"
                android:singleLine="true"
                android:inputType="text"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/_12sdp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/dark_gray" />


            <EditText
                android:id="@+id/etDes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/defect_des"
                android:textColor="@color/gray_light"
                android:textColorHint="@color/gray_light"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/dark_gray" />


            <RelativeLayout
                android:id="@+id/rlPic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
               >

                <ImageView
                    android:id="@+id/ivPic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:visibility="visible" />

            </RelativeLayout>


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_15sdp"
            android:layout_below="@+id/layuotMain"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>



    </RelativeLayout>


</ScrollView>


</layout>