<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.LoginAct">

            <!-- <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_60sdp"
                 android:background="@drawable/rounded_black_200bg">

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/poppins_medium"
                     android:gravity="center_horizontal"
                     android:padding="@dimen/_12sdp"
                     android:text="@string/login"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_14sdp" />


             </RelativeLayout>-->


            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_35sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_15sdp"
                android:src="@drawable/logo" />


            <LinearLayout
                android:layout_below="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp">


                <EditText
                    android:id="@+id/edMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/team_leader"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/black"

                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_14sdp"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"

                    android:textSize="@dimen/_14sdp"
                    android:visibility="invisible"

                    />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <RelativeLayout
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/dark_gray">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:hint="@string/password"
                            android:padding="@dimen/_10sdp"
                            android:text="@string/login"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"


                            />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</layout>